# glibc

./: INSTALL  Makeconfig  NEWS  config.h.in  config.make.in  configure  configure.ac
bits/: libc-header-start.h  libm-simd-decl-stubs.h  types.h  typesizes.h
contrib/regex2/: GNULibcRegex2.sln  libregex2.vcxproj  libregex2.vcxproj.filters  regex2test.vcxproj  regex2test.vcxproj.filters
contrib/regex2/src/: config.h  regex2test.cpp  stdafx.h  version.cpp  version.h
csu/: libc-start.c
elf/: Makefile  dl-tunables.c  dl-tunables.h  rtld.c
hurd/: hurd.h
include/: features.h  math.h
io/: access.c
malloc/: arena.c
manual/: arith.texi  install.texi
math/: Makefile  complex.h  gen-libm-have-vector-test.sh  gen-libm-test.pl  libm-test.inc  math.h  test-double.h  test-float.h  test-float128-finite.c  test-float128.c  test-float128.h  test-ifloat128.c  test-ldouble.h  test-math-floatn.h
math/bits/: cmathcalls.h  math-finite.h  mathcalls.h
posix/: regex.c  regex.h  regex_internal.c  regex_internal.h  regexec.c
stdio-common/: printf-parsemb.c  printf.h  printf_fp.c  printf_fphex.c  printf_size.c  vfprintf.c
stdlib/: Makefile  fpioconst.c  fpioconst.h  stdlib.h  strfrom-skeleton.c  tst-strtod-nan-locale-main.c  tst-strtod-round-skeleton.c  tst-strtod.h
sysdeps/generic/: fix-fp-int-convert-overflow.h  math_private.h
sysdeps/nacl/: access.c
sysdeps/powerpc/powerpc64le/: Makefile  configure  configure.ac
sysdeps/powerpc/powerpc64le/bits/: floatn.h
sysdeps/unix/: clock_gettime.c  clock_settime.c
time/: time.h
wcsmbs/: Makefile  wchar.h
(+40 files in other folders)
